--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,15 @@ body {
 	letter-spacing: .05em;
 	font-size: 17px;
 }
+
+body::-webkit-scrollbar {
+	height: 0.45em;
+}
+
+body::-webkit-scrollbar-track {
+	background-color: #181818;
+}
+
+body::-webkit-scrollbar-thumb {
+	background-color: #252525;
+}
