--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,14 @@ body {
 	font-size: 17px;
 }
 
-body::-webkit-scrollbar {
+body::-webkit-scrollbar, div > ::-webkit-scrollbar {
 	height: 0.45em;
 }
 
-body::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track, div > ::-webkit-scrollbar-track {
 	background-color: #181818;
 }
 
-body::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb, div > ::-webkit-scrollbar-thumb {
 	background-color: #252525;
 }
