--- a/public/layout_style.css
+++ b/public/layout_style.css
@@ -3944,3 +3944,24 @@ span.menuItem-glow {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 }
+
+@media only screen and (max-width: 1023px) {
+	.apexcharts-legend.apexcharts-align-right.apx-legend-position-top {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+	}
+}
+
+@media only screen and (max-width: 767px) {
+	.apexcharts-legend.apexcharts-align-right.apx-legend-position-top {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+
+@media only screen and (max-width: 479px) {
+	.apexcharts-legend.apexcharts-align-right.apx-legend-position-top {
+		display: grid;
+		grid-template-columns: repeat(1, 1fr);
+	}
+}
